updated links and styles and nav

--- a/_posts/2024-08-05-interesting-links-2024-08-05.md
+++ b/_posts/2024-08-05-interesting-links-2024-08-05.md
@@ -4,11 +4,21 @@ date: 2024-08-05
 categories: links
 ---
 
-Tags  - [general](#general)
+Tags  - [design](#design) - [general](#general)
 
+
+## design
+<div class="link-content"><img src='https://www.yankodesign.com/images/design_news/2024/08/what-are-the-7-elements-of-interior-design/00-elements-interior-1.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [What are the 7 Elements of Interior Design? - What are the 7 Elements of Interior Design?The 7...](https://www.yankodesign.com/2024/08/08/what-are-the-7-elements-of-interior-design/?utm_source=rss&utm_medium=rss&utm_campaign=what-are-the-7-elements-of-interior-design) (Yanko Design - Modern Industrial Design News - Pooja Khanna Tyagi)
+</div>
+</div>
 
 ## general
-- <img src='https://samestuffdifferentday.net/assets/2024/knowledge.jpg' alt='drawing' style='max-height: 100px;'/>  [Another Logseq check-in - The one where I talk about my continued use of...](https://samestuffdifferentday.net/2024/08/08/another-logseq-checkin/) (same stuff, different day - Michael Eaton)
-- <img src='https://www.yankodesign.com/images/design_news/2024/08/what-are-the-7-elements-of-interior-design/00-elements-interior-1.jpg' alt='drawing' style='max-height: 100px;'/>  [What are the 7 Elements of Interior Design? - What are the 7 Elements of Interior Design?The 7...](https://www.yankodesign.com/2024/08/08/what-are-the-7-elements-of-interior-design/?utm_source=rss&utm_medium=rss&utm_campaign=what-are-the-7-elements-of-interior-design) (Yanko Design - Modern Industrial Design News - Pooja Khanna Tyagi)
+<div class="link-content"><img src='https://samestuffdifferentday.net/assets/2024/knowledge.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Another Logseq check-in - The one where I talk about my continued use of...](https://samestuffdifferentday.net/2024/08/08/another-logseq-checkin/) (same stuff, different day - Michael Eaton)
+</div>
+</div>
 
 [More Links](/links)
