--- a/_posts/2024-08-12-interesting-links-2024-08-12.md
+++ b/_posts/2024-08-12-interesting-links-2024-08-12.md
@@ -4,12 +4,26 @@ date: 2024-08-12
 categories: links
 ---
 
-Tags  - [general](#general)
+Tags  - [art](#art) - [general](#general)
 
+
+## art
+<div class="link-content"><img src='https://s32625.pcdn.co/wp-content/uploads/2021/09/an-favicon-152x152-1-100x100.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Abstract Art Ideas, Techniques and Tips for Every Medium - There’s nothing like the expressive freedom of...](https://s32625.pcdn.co/art-subjects/abstract/abstract-art-ideas-techniques-and-tips-for-every-medium/) (Artists Network - Artists Network)
+</div>
+</div>
 
 ## general
-- <img src='https://news.ycombinator.com/favicon.ico' alt='drawing' style='max-height: 100px;'/>  [On Being a Senior Engineer - Comments](https://www.kitchensoap.com/2012/10/25/on-being-a-senior-engineer/) (Kitchen Soap - Hacker News)
-- <img src='https://s32625.pcdn.co/wp-content/uploads/2021/09/an-favicon-152x152-1-100x100.png' alt='drawing' style='max-height: 100px;'/>  [Abstract Art Ideas, Techniques and Tips for Every Medium - There’s nothing like the expressive freedom of...](https://s32625.pcdn.co/art-subjects/abstract/abstract-art-ideas-techniques-and-tips-for-every-medium/) (Artists Network - Artists Network)
-- <img src='https://opengraph.githubassets.com/aff719bea30a0c427a8997639cf98a905cd40d56a06bba804db426fa099d37b6/stdword/logseq13-full-house-plugin/discussions/48' alt='drawing' style='max-height: 100px;'/>  [Yearly Pages · stdword/logseq13-full-house-plugin · Discussion #48 - inspired by this Obsidian video and @inzagi1's...](https://github.com/stdword/logseq13-full-house-plugin/discussions/48) (GitHub - https://github.com/stdword/)
+<div class="link-content"><img src='https://news.ycombinator.com/favicon.ico' class="link-image"/>
+<div class="link-text" markdown="1">
+  [On Being a Senior Engineer - Comments](https://www.kitchensoap.com/2012/10/25/on-being-a-senior-engineer/) (Kitchen Soap - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://opengraph.githubassets.com/aff719bea30a0c427a8997639cf98a905cd40d56a06bba804db426fa099d37b6/stdword/logseq13-full-house-plugin/discussions/48' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Yearly Pages · stdword/logseq13-full-house-plugin · Discussion #48 - inspired by this Obsidian video and @inzagi1's...](https://github.com/stdword/logseq13-full-house-plugin/discussions/48) (GitHub - https://github.com/stdword/)
+</div>
+</div>
 
 [More Links](/links)
