--- a/_posts/2024-08-19-interesting-links-2024-08-19.md
+++ b/_posts/2024-08-19-interesting-links-2024-08-19.md
@@ -4,16 +4,28 @@ date: 2024-08-19
 categories: links
 ---
 
-Tags  - [AI](#AI) - [development](#development) - [general](#general)
+Tags  - [AI](#AI) - [development](#development) - [thinking](#thinking)
 
 
 ## AI
-- <img src='https://cdn.openai.com/API/images/opengraph.png' alt='drawing' style='max-height: 100px;'/>  [Fine-tuning - OpenAI API - Explore developer resources, tutorials, API docs,...](https://platform.openai.com/docs/guides/fine-tuning/preparing-your-dataset) (openai.com - openai.com)
+<div class="link-content"><img src='https://cdn.openai.com/API/images/opengraph.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Fine-tuning - OpenAI API - Explore developer resources, tutorials, API docs,...](https://platform.openai.com/docs/guides/fine-tuning/preparing-your-dataset) (openai.com - openai.com)
+</div>
+</div>
 
 ## development
-- <img src='https://i.ytimg.com/vi/_bP14OzIJWI/maxresdefault.jpg' alt='drawing' style='max-height: 100px;'/>  [NSA Releases Internal 1982 Lecture by Computing Pioneer Rear Admiral Grace Hopper - Today, the National Security Agency (NSA)...](https://www.youtube.com/watch?v=_bP14OzIJWI) (YouTube - The Black Vault Originals)
+<div class="link-content"><img src='https://i.ytimg.com/vi/_bP14OzIJWI/maxresdefault.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [NSA Releases Internal 1982 Lecture by Computing Pioneer Rear Admiral Grace Hopper - Today, the National Security Agency (NSA)...](https://www.youtube.com/watch?v=_bP14OzIJWI) (YouTube - The Black Vault Originals)
+</div>
+</div>
 
-## general
-- <img src='https://news.ycombinator.com/favicon.ico' alt='drawing' style='max-height: 100px;'/>  [Four Stages of Competence - Comments](https://en.wikipedia.org/wiki/Four_stages_of_competence) (wikipedia.org - Hacker News)
+## thinking
+<div class="link-content"><img src='https://news.ycombinator.com/favicon.ico' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Four Stages of Competence - Comments](https://en.wikipedia.org/wiki/Four_stages_of_competence) (wikipedia.org - Hacker News)
+</div>
+</div>
 
 [More Links](/links)
