--- a/_posts/2024-09-30-interesting-links-2024-09-30.md
+++ b/_posts/2024-09-30-interesting-links-2024-09-30.md
@@ -4,42 +4,152 @@ date: 2024-09-30
 categories: links
 ---
 
-Tags  - [AI](#AI) - [general](#general) - [jobs](#jobs) - [leadership](#leadership) - [tech](#tech)
+Tags  - [AI](#AI) - [art](#art) - [design](#design) - [fun](#fun) - [general](#general) - [inspiration](#inspiration) - [jobs](#jobs) - [leadership](#leadership) - [security](#security) - [tech](#tech)
 
 
 ## AI
-- <img src='https://visualstudiomagazine.com/-/media/ECG/visualstudiomagazine/Images/introimages/Cloud_AI_Net.jpg' alt='drawing' style='max-height: 100px;'/>  [Microsoft Ships Stable Versions of OpenAI Libraries for .NET and Azure - Further leveraging the relationship that vaulted...](https://visualstudiomagazine.com/Articles/2024/10/04/Microsoft-Ships-Stable-Versions-of-OpenAI-Libraries-for-,-d-,NET-and-Azure.aspx) (Visual Studio Magazine - News)
-- <img src='https://visualstudiomagazine.com/-/media/ECG/redmondmag/Images/IntroImagesBigSmall/CircutPagesLiteUpSmall.jpg' alt='drawing' style='max-height: 100px;'/>  [Microsoft Further Embraces OpenAPI Spec (formerly Swagger) - Microsoft has long embraced the OpenAPI...](https://visualstudiomagazine.com/Articles/2024/10/04/Microsoft-Further-Embraces-OpenAPI-Spec-formerly-Swagger.aspx) (Visual Studio Magazine - News)
-- <img src='http://www.techmeme.com/240930/i24.jpg' alt='drawing' style='max-height: 100px;'/>  [Udemy uses opt-out windows, the first of which lasted three weeks and just ended, that its creators must use to prevent their videos from being used to train AI (Jason Koebler/404 Media) -   Jason Koebler / 404 Media: Udemy uses opt-out...](http://www.techmeme.com/240930/p24#a240930p24) (Techmeme - Techmeme)
+<div class="link-content"><img src='https://visualstudiomagazine.com/-/media/ECG/visualstudiomagazine/Images/introimages/Cloud_AI_Net.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Microsoft Ships Stable Versions of OpenAI Libraries for .NET and Azure - Further leveraging the relationship that vaulted...](https://visualstudiomagazine.com/Articles/2024/10/04/Microsoft-Ships-Stable-Versions-of-OpenAI-Libraries-for-,-d-,NET-and-Azure.aspx) (Visual Studio Magazine - News)
+</div>
+</div>
+<div class="link-content"><img src='https://visualstudiomagazine.com/-/media/ECG/redmondmag/Images/IntroImagesBigSmall/CircutPagesLiteUpSmall.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Microsoft Further Embraces OpenAPI Spec (formerly Swagger) - Microsoft has long embraced the OpenAPI...](https://visualstudiomagazine.com/Articles/2024/10/04/Microsoft-Further-Embraces-OpenAPI-Spec-formerly-Swagger.aspx) (Visual Studio Magazine - News)
+</div>
+</div>
+<div class="link-content"><img src='http://www.techmeme.com/240930/i24.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Udemy uses opt-out windows, the first of which lasted three weeks and just ended, that its creators must use to prevent their videos from being used to train AI (Jason Koebler/404 Media) -   Jason Koebler / 404 Media: Udemy uses opt-out...](http://www.techmeme.com/240930/p24#a240930p24) (Techmeme - Techmeme)
+</div>
+</div>
+
+## art
+<div class="link-content"><img src='https://watercolor-journal.com/wp-content/uploads/2022/02/cropped-logodesignfinal.png?w=32' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Still life – lemon - Watercolor on paper, 9 by 9 in](https://watercolor-journal.com/2024/10/01/still-life-lemon/) (Watercolor Journal - Neelima)
+</div>
+</div>
+
+## design
+<div class="link-content"><img src='https://www.yankodesign.com/images/design_news/2024/10/513380/iphone_16_pro_retro_case_1.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [This Retro iPhone Case turns it into a Makeshift Old Windows PC with Clippy and Internet Explorer - This Retro iPhone Case turns it into a Makeshift...](https://www.yankodesign.com/2024/10/06/this-retro-iphone-case-turns-it-into-a-makeshift-old-windows-pc-with-clippy-and-internet-explorer/?utm_source=rss&utm_medium=rss&utm_campaign=this-retro-iphone-case-turns-it-into-a-makeshift-old-windows-pc-with-clippy-and-internet-explorer) (Yanko Design - Modern Industrial Design News - Sarang Sheth)
+</div>
+</div>
+<div class="link-content"><img src='https://graphicdesignjunction.com/wp-content/uploads/2024/10/creative_branding_design.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [30 Creative Branding Design and Logos For Inspiration - Branding is the soul of any business. It’s not...](https://graphicdesignjunction.com/2024/10/creative-branding-design/) (Graphic Design Junction - Muhammad Faisal)
+</div>
+</div>
+<div class="link-content"><img src='https://cdn.mos.cms.futurecdn.net/GfeS9dmqHfujaeEAh8cQ2C.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [The 10 best gaming fonts - Level up your typography with the 10 best game...](https://www.creativebloq.com/design/fonts-typography/the-10-best-gaming-fonts) (Creative Bloq - journo.tommay@gmail.com (Tom May))
+</div>
+</div>
+<div class="link-content"><img src='https://www.yankodesign.com/images/design_news/2024/09/apples-smart-home-display-redefining-design-ai-and-everyday-convenience-powered-by-homeos/apple-homeaccessory-concept.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Apple’s Smart Home Display: Redefining Design, AI, and Everyday Convenience Powered by homeOS - Apple’s Smart Home Display: Redefining Design,...](https://www.yankodesign.com/2024/09/30/apples-smart-home-display-redefining-design-ai-and-everyday-convenience-powered-by-homeos/?utm_source=rss&utm_medium=rss&utm_campaign=apples-smart-home-display-redefining-design-ai-and-everyday-convenience-powered-by-homeos) (Yanko Design - Modern Industrial Design News - Vincent Nguyen)
+</div>
+</div>
+
+## fun
+<div class="link-content"><img src='https://i0.wp.com/roomescapeartist.com/wp-content/uploads/2024/09/ifcomp-2024-logo.jpg?fit=1000%2C1000&ssl=1' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Interactive Fiction Competition 2024: Puzzle Game Highlights - Celebrating its 30th year with innovation,...](https://roomescapeartist.com/2024/10/03/interactive-fiction-competition-2024-puzzle-game-highlights/) (Room Escape Artist - Sarah Willson)
+</div>
+</div>
 
 ## general
-- <img src='https://images.macrumors.com/t/dPgRS3vEo3jLWwm5unVQL2wMPfk=/1600x/article-new/2023/10/space-black-mbp.jpg' alt='drawing' style='max-height: 100px;'/>  [Apple Potentially Facing Worst Leak Since iPhone 4 Was Left in a Bar - Alleged photos and videos of an unannounced...](https://link.join1440.com/click/37037591.3617415/aHR0cHM6Ly93d3cubWFjcnVtb3JzLmNvbS8yMDI0LzEwLzA3L2FwcGxlLXBvdGVudGlhbGx5LWZhY2luZy13b3JzdC1sZWFrLXNpbmNlLWlwaG9uZS00Lz91dG1fc291cmNlPWpvaW4xNDQwJnV0bV9tZWRpdW09ZW1haWwmdXRtX3BsYWNlbWVudD1uZXdzbGV0dGVy/66d719ac295ef3316872153aB47486b4e) (missouri.edu - Joe Rossignol)
-- <img src='https://news.ycombinator.com/favicon.ico' alt='drawing' style='max-height: 100px;'/>  [Do not use secrets in environment variables and - Comments](https://www.nodejs-security.com/blog/do-not-use-secrets-in-environment-variables-and-here-is-how-to-do-it-better) (nodejs-security.com - Hacker News)
-- <img src='https://world.hey.com/jason/avatar-9f11ce77d31e68e834c564594ee0bc32a005ee8d' alt='drawing' style='max-height: 100px;'/>  [Appetites instead of estimates - The problem with software estimates is that...](https://world.hey.com/jason/appetites-instead-of-estimates-192d39ba) (hey.com - hey.com)
-- <img src='https://jeremydmiller.com/wp-content/uploads/2023/07/jasperfx-logo-final-orange-bg.jpg' alt='drawing' style='max-height: 100px;'/>  [My Recommendations for a Test Automation Strategy - I’ve been helping a JasperFx Software client with...](https://jeremydmiller.com/2024/09/29/my-recommendations-for-a-test-automation-strategy/) (The Shade Tree Developer - The Shade Tree Developer)
-- <img src='https://samestuffdifferentday.net/assets/2023/01/words_of_wisdom.jpg' alt='drawing' style='max-height: 100px;'/>  [Powerful quotes from Powerful by Patty McCord - The one where I talk about Powerful by Patty...](https://samestuffdifferentday.net/2024/10/03/powerful/) (same stuff, different day - Michael Eaton)
-- <img src='https://www.yankodesign.com/images/design_news/2024/10/this-chair-with-floating-backrest-ergonomic-flexibility-and-modular-cushioning-is-designed-for-space-travel/Aerospace-Seat-SPN-01-Space-Perspective-Neptune-7.jpg' alt='drawing' style='max-height: 100px;'/>  [This chair with floating backrest, ergonomic flexibility, and modular cushioning is designed for space travel - This chair with floating backrest, ergonomic...](https://www.yankodesign.com/2024/10/07/this-chair-with-floating-backrest-ergonomic-flexibility-and-modular-cushioning-is-designed-for-space-travel/?utm_source=rss&utm_medium=rss&utm_campaign=this-chair-with-floating-backrest-ergonomic-flexibility-and-modular-cushioning-is-designed-for-space-travel) (Yanko Design - Modern Industrial Design News - Gaurav Sood)
-- <img src='https://s3.amazonaws.com/assets.reformedjournal.com/wp-content/uploads/sites/2/2024/10/04111342/for-our-daughters-image.jpeg' alt='drawing' style='max-height: 100px;'/>  [You Are Not Alone - We had become good friends and loved to talk and...](https://blog.reformedjournal.com/2024/10/07/you-are-not-alone/) (The Reformed Journal Blog - Rebecca Koerselman)
-- <img src='https://samestuffdifferentday.net/assets/images/links_header.jpg' alt='drawing' style='max-height: 100px;'/>  [Interesting links of the week 2024-41 - Here are the best and most interesting articles,...](https://samestuffdifferentday.net/2024/10/07/Interesting-links-of-the-week-2024-41/) (same stuff, different day - Michael Eaton)
-- <img src='https://www.yankodesign.com/images/design_news/2024/10/513380/iphone_16_pro_retro_case_1.jpg' alt='drawing' style='max-height: 100px;'/>  [This Retro iPhone Case turns it into a Makeshift Old Windows PC with Clippy and Internet Explorer - This Retro iPhone Case turns it into a Makeshift...](https://www.yankodesign.com/2024/10/06/this-retro-iphone-case-turns-it-into-a-makeshift-old-windows-pc-with-clippy-and-internet-explorer/?utm_source=rss&utm_medium=rss&utm_campaign=this-retro-iphone-case-turns-it-into-a-makeshift-old-windows-pc-with-clippy-and-internet-explorer) (Yanko Design - Modern Industrial Design News - Sarang Sheth)
-- <img src='https://news.ycombinator.com/favicon.ico' alt='drawing' style='max-height: 100px;'/>  [Popular Science Magazine Archives May 1872-March 2009 - Comments](https://books.google.com/books/about/Popular_Science.html?id=qR8DAAAAMBAJ) (Google Books - Hacker News)
-- <img src='https://s3.amazonaws.com/assets.reformedjournal.com/wp-content/uploads/sites/2/2021/03/07181801/tired_doctor.jpg' alt='drawing' style='max-height: 100px;'/>  [Looking for the Helpers - This sugary-sweet idea of hope is empty and...](https://blog.reformedjournal.com/2024/10/06/looking-for-the-helpers/) (The Reformed Journal Blog - Alyssa Muehmel)
-- <img src='https://theopolisinstitute.com/wp-content/uploads/2024/10/305998rgsdl-1024x743.jpg' alt='drawing' style='max-height: 100px;'/>  [Regarding Abel’s Offering - Two offerings Humanity’s first vocation involves...](https://theopolisinstitute.com/regarding-abels-offering/) (Theopolis Institute - Scott Fairbanks)
-- <img src='https://i0.wp.com/roomescapeartist.com/wp-content/uploads/2024/09/ifcomp-2024-logo.jpg?fit=1000%2C1000&ssl=1' alt='drawing' style='max-height: 100px;'/>  [Interactive Fiction Competition 2024: Puzzle Game Highlights - Celebrating its 30th year with innovation,...](https://roomescapeartist.com/2024/10/03/interactive-fiction-competition-2024-puzzle-game-highlights/) (Room Escape Artist - Sarah Willson)
-- <img src='https://graphicdesignjunction.com/wp-content/uploads/2024/10/creative_branding_design.jpg' alt='drawing' style='max-height: 100px;'/>  [30 Creative Branding Design and Logos For Inspiration - Branding is the soul of any business. It’s not...](https://graphicdesignjunction.com/2024/10/creative-branding-design/) (Graphic Design Junction - Muhammad Faisal)
-- <img src='https://watercolor-journal.com/wp-content/uploads/2022/02/cropped-logodesignfinal.png?w=32' alt='drawing' style='max-height: 100px;'/>  [Still life – lemon - Watercolor on paper, 9 by 9 in](https://watercolor-journal.com/2024/10/01/still-life-lemon/) (Watercolor Journal - Neelima)
-- <img src='https://cdn.mos.cms.futurecdn.net/GfeS9dmqHfujaeEAh8cQ2C.jpg' alt='drawing' style='max-height: 100px;'/>  [The 10 best gaming fonts - Level up your typography with the 10 best game...](https://www.creativebloq.com/design/fonts-typography/the-10-best-gaming-fonts) (Creative Bloq - journo.tommay@gmail.com (Tom May))
-- <img src='https://www.teachthought.com/wp-content/uploads/2024/06/942442-fi.png' alt='drawing' style='max-height: 100px;'/>  [10 Amazing Research Projects Going On Right Now - Among other research studies, researchers are...](https://www.teachthought.com/education/interesting-research-projects/) (TeachThought - TeachThought Staff)
-- <img src='https://www.yankodesign.com/images/design_news/2024/09/apples-smart-home-display-redefining-design-ai-and-everyday-convenience-powered-by-homeos/apple-homeaccessory-concept.jpg' alt='drawing' style='max-height: 100px;'/>  [Apple’s Smart Home Display: Redefining Design, AI, and Everyday Convenience Powered by homeOS - Apple’s Smart Home Display: Redefining Design,...](https://www.yankodesign.com/2024/09/30/apples-smart-home-display-redefining-design-ai-and-everyday-convenience-powered-by-homeos/?utm_source=rss&utm_medium=rss&utm_campaign=apples-smart-home-display-redefining-design-ai-and-everyday-convenience-powered-by-homeos) (Yanko Design - Modern Industrial Design News - Vincent Nguyen)
+<div class="link-content"><img src='https://images.macrumors.com/t/dPgRS3vEo3jLWwm5unVQL2wMPfk=/1600x/article-new/2023/10/space-black-mbp.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Apple Potentially Facing Worst Leak Since iPhone 4 Was Left in a Bar - Alleged photos and videos of an unannounced...](https://link.join1440.com/click/37037591.3617415/aHR0cHM6Ly93d3cubWFjcnVtb3JzLmNvbS8yMDI0LzEwLzA3L2FwcGxlLXBvdGVudGlhbGx5LWZhY2luZy13b3JzdC1sZWFrLXNpbmNlLWlwaG9uZS00Lz91dG1fc291cmNlPWpvaW4xNDQwJnV0bV9tZWRpdW09ZW1haWwmdXRtX3BsYWNlbWVudD1uZXdzbGV0dGVy/66d719ac295ef3316872153aB47486b4e) (missouri.edu - Joe Rossignol)
+</div>
+</div>
+<div class="link-content"><img src='https://world.hey.com/jason/avatar-9f11ce77d31e68e834c564594ee0bc32a005ee8d' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Appetites instead of estimates - The problem with software estimates is that...](https://world.hey.com/jason/appetites-instead-of-estimates-192d39ba) (hey.com - hey.com)
+</div>
+</div>
+<div class="link-content"><img src='https://jeremydmiller.com/wp-content/uploads/2023/07/jasperfx-logo-final-orange-bg.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [My Recommendations for a Test Automation Strategy - I’ve been helping a JasperFx Software client with...](https://jeremydmiller.com/2024/09/29/my-recommendations-for-a-test-automation-strategy/) (The Shade Tree Developer - The Shade Tree Developer)
+</div>
+</div>
+<div class="link-content"><img src='https://samestuffdifferentday.net/assets/2023/01/words_of_wisdom.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Powerful quotes from Powerful by Patty McCord - The one where I talk about Powerful by Patty...](https://samestuffdifferentday.net/2024/10/03/powerful/) (same stuff, different day - Michael Eaton)
+</div>
+</div>
+<div class="link-content"><img src='https://www.yankodesign.com/images/design_news/2024/10/this-chair-with-floating-backrest-ergonomic-flexibility-and-modular-cushioning-is-designed-for-space-travel/Aerospace-Seat-SPN-01-Space-Perspective-Neptune-7.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [This chair with floating backrest, ergonomic flexibility, and modular cushioning is designed for space travel - This chair with floating backrest, ergonomic...](https://www.yankodesign.com/2024/10/07/this-chair-with-floating-backrest-ergonomic-flexibility-and-modular-cushioning-is-designed-for-space-travel/?utm_source=rss&utm_medium=rss&utm_campaign=this-chair-with-floating-backrest-ergonomic-flexibility-and-modular-cushioning-is-designed-for-space-travel) (Yanko Design - Modern Industrial Design News - Gaurav Sood)
+</div>
+</div>
+<div class="link-content"><img src='https://samestuffdifferentday.net/assets/images/links_header.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Interesting links of the week 2024-41 - Here are the best and most interesting articles,...](https://samestuffdifferentday.net/2024/10/07/Interesting-links-of-the-week-2024-41/) (same stuff, different day - Michael Eaton)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/favicon.ico' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Popular Science Magazine Archives May 1872-March 2009 - Comments](https://books.google.com/books/about/Popular_Science.html?id=qR8DAAAAMBAJ) (Google Books - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://www.teachthought.com/wp-content/uploads/2024/06/942442-fi.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [10 Amazing Research Projects Going On Right Now - Among other research studies, researchers are...](https://www.teachthought.com/education/interesting-research-projects/) (TeachThought - TeachThought Staff)
+</div>
+</div>
+
+## inspiration
+<div class="link-content"><img src='https://s3.amazonaws.com/assets.reformedjournal.com/wp-content/uploads/sites/2/2024/10/04111342/for-our-daughters-image.jpeg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [You Are Not Alone - We had become good friends and loved to talk and...](https://blog.reformedjournal.com/2024/10/07/you-are-not-alone/) (The Reformed Journal Blog - Rebecca Koerselman)
+</div>
+</div>
+<div class="link-content"><img src='https://s3.amazonaws.com/assets.reformedjournal.com/wp-content/uploads/sites/2/2021/03/07181801/tired_doctor.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Looking for the Helpers - This sugary-sweet idea of hope is empty and...](https://blog.reformedjournal.com/2024/10/06/looking-for-the-helpers/) (The Reformed Journal Blog - Alyssa Muehmel)
+</div>
+</div>
+<div class="link-content"><img src='https://theopolisinstitute.com/wp-content/uploads/2024/10/305998rgsdl-1024x743.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Regarding Abel’s Offering - Two offerings Humanity’s first vocation involves...](https://theopolisinstitute.com/regarding-abels-offering/) (Theopolis Institute - Scott Fairbanks)
+</div>
+</div>
 
 ## jobs
-- <img src='https://samestuffdifferentday.net/assets/2024/wtf.jpg' alt='drawing' style='max-height: 100px;'/>  [My thoughts on RTO - The one where I talk about return to office...](https://samestuffdifferentday.net/2024/10/02/rto/) (same stuff, different day - Michael Eaton)
+<div class="link-content"><img src='https://samestuffdifferentday.net/assets/2024/wtf.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [My thoughts on RTO - The one where I talk about return to office...](https://samestuffdifferentday.net/2024/10/02/rto/) (same stuff, different day - Michael Eaton)
+</div>
+</div>
 
 ## leadership
-- <img src='https://spin.atomicobject.com/wp-content/uploads/JDP-AO2023-605-scaled.jpg' alt='drawing' style='max-height: 100px;'/>  [Leading When You Aren’t the Leader - As a leader, it can be hard to take a step back...](https://feeds.feedblitz.com/~/905446664/0/atomicspin~Leading-When-You-Arent-the-Leader/) (Marginal REVOLUTION - Jacob Williams)
+<div class="link-content"><img src='https://spin.atomicobject.com/wp-content/uploads/JDP-AO2023-605-scaled.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Leading When You Aren’t the Leader - As a leader, it can be hard to take a step back...](https://feeds.feedblitz.com/~/905446664/0/atomicspin~Leading-When-You-Arent-the-Leader/) (Marginal REVOLUTION - Jacob Williams)
+</div>
+</div>
+
+## security
+<div class="link-content"><img src='https://news.ycombinator.com/favicon.ico' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Do not use secrets in environment variables and - Comments](https://www.nodejs-security.com/blog/do-not-use-secrets-in-environment-variables-and-here-is-how-to-do-it-better) (nodejs-security.com - Hacker News)
+</div>
+</div>
 
 ## tech
-- <img src='https://news.ycombinator.com/favicon.ico' alt='drawing' style='max-height: 100px;'/>  [Raspberry Pi releases faster class A2 micro SD cards and bumper case for Pi 5 - Comments](https://www.tomshardware.com/raspberry-pi/raspberry-pi-release-faster-branded-class-a2-micro-sd-cards-and-bumper-case-for-raspberry-pi-5) (Tom's Hardware - Hacker News)
-- <img src='https://www.yankodesign.com/images/design_news/2024/09/best-tech-designs-of-august/10_best_tech_gadgets_august_yanko_design_hero.jpg' alt='drawing' style='max-height: 100px;'/>  [The 10 Best Tech Gadgets Of August 2024 - The 10 Best Tech Gadgets Of August 2024August...](https://www.yankodesign.com/2024/09/30/the-10-best-tech-gadgets-of-august-2024/?utm_source=rss&utm_medium=rss&utm_campaign=the-10-best-tech-gadgets-of-august-2024) (Yanko Design - Modern Industrial Design News - Srishti Mitra)
+<div class="link-content"><img src='https://news.ycombinator.com/favicon.ico' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Raspberry Pi releases faster class A2 micro SD cards and bumper case for Pi 5 - Comments](https://www.tomshardware.com/raspberry-pi/raspberry-pi-release-faster-branded-class-a2-micro-sd-cards-and-bumper-case-for-raspberry-pi-5) (Tom's Hardware - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://www.yankodesign.com/images/design_news/2024/09/best-tech-designs-of-august/10_best_tech_gadgets_august_yanko_design_hero.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [The 10 Best Tech Gadgets Of August 2024 - The 10 Best Tech Gadgets Of August 2024August...](https://www.yankodesign.com/2024/09/30/the-10-best-tech-gadgets-of-august-2024/?utm_source=rss&utm_medium=rss&utm_campaign=the-10-best-tech-gadgets-of-august-2024) (Yanko Design - Modern Industrial Design News - Srishti Mitra)
+</div>
+</div>
 
 [More Links](/links)
