--- a/_posts/2024-11-11-interesting-links-2024-11-11.md
+++ b/_posts/2024-11-11-interesting-links-2024-11-11.md
@@ -4,58 +4,221 @@ date: 2024-11-11
 categories: links
 ---
 
-Tags  - [AI](#AI) - [development](#development) - [eink](#eink) - [general](#general) - [jobs](#jobs) - [leadership](#leadership) - [tech](#tech)
+Tags  - [AI](#AI) - [design](#design) - [development](#development) - [ebikes](#ebikes) - [eink](#eink) - [fun](#fun) - [jobs](#jobs) - [leadership](#leadership) - [nature](#nature) - [security](#security) - [tech](#tech) - [ui](#ui)
 
 
 ## AI
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [AI isn't unleashing imaginations, it's outsourcing them. The purpose is profit - Comments](https://www.theguardian.com/technology/2024/nov/16/ai-isnt-about-unleashing-our-imaginations-its-about-outsourcing-them-the-real-purpose-is-profit) (the Guardian - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Llama-OCR: An Open-Source Llama 3.2 Based OCR Tool - Comments](https://llamaocr.com/) (llamaocr.com - Hacker News)
+</div>
+</div>
 <div class="link-content"><img src='http://www.techmeme.com/241114/i37.jpg' class="link-image"/>
-<div class="link-text" markdown="1">  
-[BSA, representing OpenAI, Microsoft, and others, urges Trump to review rules that are "unnecessarily impeding AI adoption" but to keep some of Biden's moves (Morgan Chalfant/Semafor) -   Morgan Chalfant / Semafor: BSA, representing...](http://www.techmeme.com/241114/p37#a241114p37) (Techmeme - Techmeme)
+<div class="link-text" markdown="1">
+  [BSA, representing OpenAI, Microsoft, and others, urges Trump to review rules that are "unnecessarily impeding AI adoption" but to keep some of Biden's moves (Morgan Chalfant/Semafor) -   Morgan Chalfant / Semafor: BSA, representing...](http://www.techmeme.com/241114/p37#a241114p37) (Techmeme - Techmeme)
 </div>
 </div>
-- <img src='http://www.techmeme.com/241114/i30.jpg' alt='drawing' style='max-height: 100px;'/>  [The EU publishes its first draft of a Code of Practice under the AI Act for general-purpose AI models, including provisions for copyright and systemic risk (Natasha Lomas/TechCrunch) -   Natasha Lomas / TechCrunch: The EU publishes...](http://www.techmeme.com/241114/p30#a241114p30) (Techmeme - Techmeme)
-- <img src='https://cdn.mos.cms.futurecdn.net/gTrcJjwtuonmBP2yVcaXpd.png' alt='drawing' style='max-height: 100px;'/>  [Is it weird that I love Apple's hilariously cryptic AI notifications? - It's brilliant for all the wrong reasons.](https://www.creativebloq.com/tech/is-it-weird-that-i-love-apples-hilariously-cryptic-ai-notifications) (Creative Bloq - Creative Bloq)
-- <img src='http://www.techmeme.com/241113/i43.jpg' alt='drawing' style='max-height: 100px;'/>  [Sources: OpenAI plans to launch a new AI agent codenamed Operator, which can use a computer to take actions on a person's behalf, in January (Bloomberg) -   Bloomberg: Sources: OpenAI plans to launch a...](http://www.techmeme.com/241113/p43#a241113p43) (Techmeme - Techmeme)
-- <img src='https://news.ycombinator.com/y18.svg' alt='drawing' style='max-height: 100px;'/>  [Qwen2.5-Coder-32B is an LLM that can code well that runs on my Mac - Comments](https://simonwillison.net/2024/Nov/12/qwen25-coder/) (simonwillison.net - Hacker News)
+<div class="link-content"><img src='http://www.techmeme.com/241114/i30.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [The EU publishes its first draft of a Code of Practice under the AI Act for general-purpose AI models, including provisions for copyright and systemic risk (Natasha Lomas/TechCrunch) -   Natasha Lomas / TechCrunch: The EU publishes...](http://www.techmeme.com/241114/p30#a241114p30) (Techmeme - Techmeme)
+</div>
+</div>
+<div class="link-content"><img src='https://cdn.mos.cms.futurecdn.net/gTrcJjwtuonmBP2yVcaXpd.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Is it weird that I love Apple's hilariously cryptic AI notifications? - It's brilliant for all the wrong reasons.](https://www.creativebloq.com/tech/is-it-weird-that-i-love-apples-hilariously-cryptic-ai-notifications) (Creative Bloq - Creative Bloq)
+</div>
+</div>
+<div class="link-content"><img src='http://www.techmeme.com/241113/i43.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Sources: OpenAI plans to launch a new AI agent codenamed Operator, which can use a computer to take actions on a person's behalf, in January (Bloomberg) -   Bloomberg: Sources: OpenAI plans to launch a...](http://www.techmeme.com/241113/p43#a241113p43) (Techmeme - Techmeme)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Qwen2.5-Coder-32B is an LLM that can code well that runs on my Mac - Comments](https://simonwillison.net/2024/Nov/12/qwen25-coder/) (simonwillison.net - Hacker News)
+</div>
+</div>
+
+## design
+<div class="link-content"><img src='https://graphicdesignjunction.com/wp-content/uploads/2024/11/graphic_design_trends_2025.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [10 Top Graphic Design Trends for 2025 - As 2024 wraps up, we’re on the cusp of entering...](https://graphicdesignjunction.com/2024/11/top-graphic-design-trends-for-2025/) (Graphic Design Junction - Muhammad Faisal)
+</div>
+</div>
+<div class="link-content"><img src='https://www.yankodesign.com/images/design_news/2024/11/detailed-wooden-furniture-designs-draft/top_10_wooden_furniture_designs_yanko_design_hero.webp' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Top 10 Wooden Furniture Designs With Clever Details That Merge Utility & Art - Top 10 Wooden Furniture Designs With Clever...](https://www.yankodesign.com/2024/11/15/top-10-wooden-furniture-designs-with-clever-details-that-merge-utility-art/?utm_source=rss&utm_medium=rss&utm_campaign=top-10-wooden-furniture-designs-with-clever-details-that-merge-utility-art) (Yanko Design - Modern Industrial Design News - Srishti Mitra)
+</div>
+</div>
+<div class="link-content"><img src='https://rohitbhargava.com/images/2024/11/TIME-inventions-900x600-1.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [A Short Tour of the Best Inventions of 2024 According to TIME Magazine - The newly released TIME Best Inventions of...](https://rohitbhargava.com/a-short-tour-of-the-best-inventions-of-2024-according-to-time-magazine/) (Rohit Bhargava - Rohit Bhargava)
+</div>
+</div>
+<div class="link-content"><img src='https://graphicdesignjunction.com/wp-content/uploads/2024/11/top_visual_trends_2025.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [10 Top Visual Trends for 2025 - The world of visual design is constantly...](https://graphicdesignjunction.com/2024/11/10-top-visual-trends-for-2025/) (Graphic Design Junction - Muhammad Faisal)
+</div>
+</div>
 
 ## development
-- <img src='https://news.ycombinator.com/y18.svg' alt='drawing' style='max-height: 100px;'/>  [Please, Stop the Coding Challenges - Comments](https://blackentropy.bearblog.dev/please-stop-the-absurd-coding-challenges/) (_blackentropy - Hacker News)
-- <img src='https://news.ycombinator.com/y18.svg' alt='drawing' style='max-height: 100px;'/>  [AI Makes Tech Debt More Expensive - Comments](https://www.gauge.sh/blog/ai-makes-tech-debt-more-expensive) (gauge.sh - Hacker News)
-- <img src='https://news.ycombinator.com/y18.svg' alt='drawing' style='max-height: 100px;'/>  [I Regret Ever Open Sourcing Java – Jill Malony Ratkevic - Comments](https://m.facebook.com/login.php?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D10159934131461514%26id%3D520846513&refsrc=deprecated&_rdr) (facebook.com - Hacker News)
-- <img src='https://visualstudiomagazine.com/design/ECG/VisualStudioMagazine/img/vsm_apple_icon.png' alt='drawing' style='max-height: 100px;'/>  [In .NET 9 Debut, Microsoft Focuses on .NET Aspire, AI - Microsoft shipped .NET 9 today with the dev team...](https://visualstudiomagazine.com/Articles/2024/11/12/In-,-d-,NET-9-Debut-Microsoft-Focuses-on-NET-Aspire-AI.aspx) (Visual Studio Magazine - News)
+<div class="link-content"><img src='https://www.troyhunt.com/content/images/2024/11/Splash-Template@1x_1-1.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+ Why refactoring is important, necessary, and not shameful. [Weekly Update 426 - I have absolutely no problem at all talking about...](https://www.troyhunt.com/weekly-update-426/) (Troy Hunt - Troy Hunt)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Please, Stop the Coding Challenges - Comments](https://blackentropy.bearblog.dev/please-stop-the-absurd-coding-challenges/) (_blackentropy - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [AI Makes Tech Debt More Expensive - Comments](https://www.gauge.sh/blog/ai-makes-tech-debt-more-expensive) (gauge.sh - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [I Regret Ever Open Sourcing Java – Jill Malony Ratkevic - Comments](https://m.facebook.com/login.php?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D10159934131461514%26id%3D520846513&refsrc=deprecated&_rdr) (facebook.com - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://visualstudiomagazine.com/design/ECG/VisualStudioMagazine/img/vsm_apple_icon.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [In .NET 9 Debut, Microsoft Focuses on .NET Aspire, AI - Microsoft shipped .NET 9 today with the dev team...](https://visualstudiomagazine.com/Articles/2024/11/12/In-,-d-,NET-9-Debut-Microsoft-Focuses-on-NET-Aspire-AI.aspx) (Visual Studio Magazine - News)
+</div>
+</div>
+
+## ebikes
+<div class="link-content"><img src='https://www.yankodesign.com/images/design_news/2024/11/americas-best-selling-cargo-e-bike-arrives-with-advanced-features-and-new-design-at-same-affordable-price/Lectric-XPedition-2-9.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [America’s best-selling cargo e-bike arrives with advanced features at same affordable price - America’s best-selling cargo e-bike arrives with...](https://www.yankodesign.com/2024/11/15/americas-best-selling-cargo-e-bike-arrives-with-advanced-features-at-same-affordable-price/?utm_source=rss&utm_medium=rss&utm_campaign=americas-best-selling-cargo-e-bike-arrives-with-advanced-features-at-same-affordable-price) (Yanko Design - Modern Industrial Design News - Gaurav Sood)
+</div>
+</div>
 
 ## eink
-- <img src='https://news.ycombinator.com/y18.svg' alt='drawing' style='max-height: 100px;'/>  [MomBoard: E-ink display for a parent with amnesia - Comments](https://jan.miksovsky.com/posts/2024/11-12-momboard) (miksovsky.com - Hacker News)
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [MomBoard: E-ink display for a parent with amnesia - Comments](https://jan.miksovsky.com/posts/2024/11-12-momboard) (miksovsky.com - Hacker News)
+</div>
+</div>
 
-## general
-- <img src='https://graphicdesignjunction.com/wp-content/uploads/2024/11/graphic_design_trends_2025.jpg' alt='drawing' style='max-height: 100px;'/>  [10 Top Graphic Design Trends for 2025 - As 2024 wraps up, we’re on the cusp of entering...](https://graphicdesignjunction.com/2024/11/top-graphic-design-trends-for-2025/) (Graphic Design Junction - Muhammad Faisal)
-- <img src='https://www.yankodesign.com/images/design_news/2015/06/home/oppermann_fullwidth.jpg' alt='drawing' style='max-height: 100px;'/>  [This Desktop Robot Toy Is A Delightful Tribute to the Iconic Apple IIe Computer - This Desktop Robot Toy Is A Delightful Tribute to...](https://www.yankodesign.com/2024/11/15/this-desktop-robot-toy-is-a-delightful-tribute-to-the-iconic-apple-iie-computer/?utm_source=rss&utm_medium=rss&utm_campaign=this-desktop-robot-toy-is-a-delightful-tribute-to-the-iconic-apple-iie-computer) (Yanko Design - Modern Industrial Design News - JC Torres)
-- <img src='https://www.yankodesign.com/images/design_news/2024/11/detailed-wooden-furniture-designs-draft/top_10_wooden_furniture_designs_yanko_design_hero.webp' alt='drawing' style='max-height: 100px;'/>  [Top 10 Wooden Furniture Designs With Clever Details That Merge Utility & Art - Top 10 Wooden Furniture Designs With Clever...](https://www.yankodesign.com/2024/11/15/top-10-wooden-furniture-designs-with-clever-details-that-merge-utility-art/?utm_source=rss&utm_medium=rss&utm_campaign=top-10-wooden-furniture-designs-with-clever-details-that-merge-utility-art) (Yanko Design - Modern Industrial Design News - Srishti Mitra)
-- <img src='https://lifehacker.com/imagery/articles/01JCP6SAPYTD1AKT33A1P9B0ZD/hero-image.png' alt='drawing' style='max-height: 100px;'/>  [Please Don't Use Any of These Passwords - Your accounts can be breached instantly.](https://lifehacker.com/tech/the-weakest-passwords-people-often-use) (Lifehacker - Jake Peterson)
-- <img src='https://news.ycombinator.com/y18.svg' alt='drawing' style='max-height: 100px;'/>  [Visual Basic 6 IDE recreated in C# - Comments](https://github.com/BAndysc/AvaloniaVisualBasic6) (GitHub - Hacker News)
-- <img src='https://news.ycombinator.com/y18.svg' alt='drawing' style='max-height: 100px;'/>  [Europeans Spend 575M Hours Clicking Cookie Banners Every Year - Comments](https://legiscope.com/blog/hidden-productivity-drain-cookie-banners) ( - Hacker News)
-- <img src='https://new.express.adobe.com/webpage/YObLHZ8m3jhyc/resources/1730730646214?asset_id=rendition' alt='drawing' style='max-height: 100px;'/>  [2024 NBP International Awards Winners - ](https://link.join1440.com/click/37454716.4078794/aHR0cHM6Ly9uZXcuZXhwcmVzcy5hZG9iZS5jb20vd2VicGFnZS9ZT2JMSFo4bTNqaHljP3V0bV9zb3VyY2U9am9pbjE0NDAmdXRtX21lZGl1bT1lbWFpbCZ1dG1fcGxhY2VtZW50PW5ld3NsZXR0ZXI/66d719ac295ef3316872153aBaeb9bc06) (missouri.edu - link.join1440.com)
-- <img src='https://lifehacker.com/imagery/articles/01JCNDWFH5SV8WBA16MJ5NZBPM/hero-image.png' alt='drawing' style='max-height: 100px;'/>  [This Is the Best Way to Germinate Seeds Outside During Winter - With this method, the results are more resilient...](https://lifehacker.com/home/how-to-germinate-seeds-outside-during-winter) (Lifehacker - Amanda Blum)
-- <img src='https://blog.reformedjournal.com/wp-content/uploads/sites/2/2024/11/echochamber-1-768x576.jpg' alt='drawing' style='max-height: 100px;'/>  [Echo Chamber or Community? - A community gives you the energy to come out of...](https://blog.reformedjournal.com/2024/11/14/echo-chamber-or-community/) (The Reformed Journal Blog - Steve Mathonnet-VanderWell)
-- <img src='https://lifehacker.com/imagery/articles/01JCJQE3AX5CW6FS1D41V242BW/hero-image.png' alt='drawing' style='max-height: 100px;'/>  [AirPlay Mirroring on Mac Just Got a Huge Upgrade - Mirror a single app or window, or turn your TV...](https://lifehacker.com/tech/airplay-mirroring-on-mac-just-got-a-huge-upgrade) (Lifehacker - Khamosh Pathak)
-- <img src='https://design-milk.com/img/favicon/dm-favicon-192-192.png' alt='drawing' style='max-height: 100px;'/>  [2024 Best Modern Gifts for the Minimalist - Skim Milk's 2024 list of 10 minimalist gift...](https://design-milk.com/2024-best-modern-gifts-for-the-minimalist/?utm_source=rss&utm_medium=rss&utm_campaign=2024-best-modern-gifts-for-the-minimalist) (Design Milk - Leo Lei)
-- <img src='https://rohitbhargava.com/images/2024/11/TIME-inventions-900x600-1.jpg' alt='drawing' style='max-height: 100px;'/>  [A Short Tour of the Best Inventions of 2024 According to TIME Magazine - The newly released TIME Best Inventions of...](https://rohitbhargava.com/a-short-tour-of-the-best-inventions-of-2024-according-to-time-magazine/) (Rohit Bhargava - Rohit Bhargava)
-- <img src='https://graphicdesignjunction.com/wp-content/uploads/2024/11/top_visual_trends_2025.jpg' alt='drawing' style='max-height: 100px;'/>  [10 Top Visual Trends for 2025 - The world of visual design is constantly...](https://graphicdesignjunction.com/2024/11/10-top-visual-trends-for-2025/) (Graphic Design Junction - Muhammad Faisal)
-- <img src='https://www.yankodesign.com/images/design_news/2024/11/top-5-journaling-tools-to-kickstart-your-journaling-journey/top_5_journaling_tools_yanko_design_hero.jpg' alt='drawing' style='max-height: 100px;'/>  [Top 5 Minimal Journaling Tools To Kickstart Your Journaling Journey - Top 5 Minimal Journaling Tools To Kickstart Your...](https://www.yankodesign.com/2024/11/11/top-5-minimal-journaling-tools-to-kickstart-your-journaling-journey/?utm_source=rss&utm_medium=rss&utm_campaign=top-5-minimal-journaling-tools-to-kickstart-your-journaling-journey) (Yanko Design - Modern Industrial Design News - Srishti Mitra)
+## fun
+<div class="link-content"><img src='https://www.yankodesign.com/images/design_news/2015/06/home/oppermann_fullwidth.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [This Desktop Robot Toy Is A Delightful Tribute to the Iconic Apple IIe Computer - This Desktop Robot Toy Is A Delightful Tribute to...](https://www.yankodesign.com/2024/11/15/this-desktop-robot-toy-is-a-delightful-tribute-to-the-iconic-apple-iie-computer/?utm_source=rss&utm_medium=rss&utm_campaign=this-desktop-robot-toy-is-a-delightful-tribute-to-the-iconic-apple-iie-computer) (Yanko Design - Modern Industrial Design News - JC Torres)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Visual Basic 6 IDE recreated in C# - Comments](https://github.com/BAndysc/AvaloniaVisualBasic6) (GitHub - Hacker News)
+</div>
+</div>
 
 ## jobs
-- <img src='https://hbr.org/favicon.ico' alt='drawing' style='max-height: 100px;'/>  [’Tis the Season to Reflect on Your Professional Relationships - Take advantage of the momentum of the holidays to...](https://hbr.org/2024/11/tis-the-season-to-reflect-on-your-professional-relationships) (Harvard Business Review - Marlo Lyons)
-- <img src='https://news.ycombinator.com/y18.svg' alt='drawing' style='max-height: 100px;'/>  [Looking for a Job Is Tough - Comments](https://blog.kaplich.me/looking-for-a-job-is-tough/) (Sergey Kaplich - Hacker News)
+<div class="link-content"><img src='https://spin.atomicobject.com/wp-content/uploads/bracketeer-JillDeVriesPhotography-AO2022-336-1-1-scaled.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [3 Benefits of Remote Work (and Why We Chose Co-Location) - I believe that remote-first is a viable model for...](https://feeds.feedblitz.com/~/907932512/0/atomicspin~Benefits-of-Remote-Work-and-Why-We-Chose-CoLocation/) (Marginal REVOLUTION - Ryan Abel)
+</div>
+</div>
+<div class="link-content"><img src='https://hbr.org/favicon.ico' class="link-image"/>
+<div class="link-text" markdown="1">
+  [’Tis the Season to Reflect on Your Professional Relationships - Take advantage of the momentum of the holidays to...](https://hbr.org/2024/11/tis-the-season-to-reflect-on-your-professional-relationships) (Harvard Business Review - Marlo Lyons)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Looking for a Job Is Tough - Comments](https://blog.kaplich.me/looking-for-a-job-is-tough/) (Sergey Kaplich - Hacker News)
+</div>
+</div>
 
 ## leadership
-- <img src='https://hbr.org/favicon.ico' alt='drawing' style='max-height: 100px;'/>  [How to Navigate a Leadership Transition - If you’re taking on a new leadership role, this...](https://hbr.org/podcast/2024/11/how-to-navigate-a-leadership-transition) (Harvard Business Review - HBR.org)
+<div class="link-content"><img src='https://hbr.org/favicon.ico' class="link-image"/>
+<div class="link-text" markdown="1">
+  [How to Navigate a Leadership Transition - If you’re taking on a new leadership role, this...](https://hbr.org/podcast/2024/11/how-to-navigate-a-leadership-transition) (Harvard Business Review - HBR.org)
+</div>
+</div>
+
+## nature
+<div class="link-content"><img src='https://new.express.adobe.com/webpage/YObLHZ8m3jhyc/resources/1730730646214?asset_id=rendition' class="link-image"/>
+<div class="link-text" markdown="1">
+  [2024 NBP International Awards Winners - ](https://link.join1440.com/click/37454716.4078794/aHR0cHM6Ly9uZXcuZXhwcmVzcy5hZG9iZS5jb20vd2VicGFnZS9ZT2JMSFo4bTNqaHljP3V0bV9zb3VyY2U9am9pbjE0NDAmdXRtX21lZGl1bT1lbWFpbCZ1dG1fcGxhY2VtZW50PW5ld3NsZXR0ZXI/66d719ac295ef3316872153aBaeb9bc06) (missouri.edu - link.join1440.com)
+</div>
+</div>
+<div class="link-content"><img src='https://lifehacker.com/imagery/articles/01JCNDWFH5SV8WBA16MJ5NZBPM/hero-image.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [This Is the Best Way to Germinate Seeds Outside During Winter - With this method, the results are more resilient...](https://lifehacker.com/home/how-to-germinate-seeds-outside-during-winter) (Lifehacker - Amanda Blum)
+</div>
+</div>
+
+## security
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Will passkeys ever replace passwords? Can they? Here's why they should - Comments](https://www.theregister.com/2024/11/17/passkeys_passwords/) (theregister.com - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [How Public Key Cryptography Works, Using Only Simple Math - Comments](https://www.quantamagazine.org/how-public-key-cryptography-really-works-20241115/) (Quanta Magazine - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://lifehacker.com/imagery/articles/01JCP6SAPYTD1AKT33A1P9B0ZD/hero-image.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Please Don't Use Any of These Passwords - Your accounts can be breached instantly.](https://lifehacker.com/tech/the-weakest-passwords-people-often-use) (Lifehacker - Jake Peterson)
+</div>
+</div>
 
 ## tech
-- <img src='https://www.eff.org/files/banner_library/og-repair_0.png' alt='drawing' style='max-height: 100px;'/>  ["Why Is It So Expensive To Repair My Devices?" - Now, of course, we’ve all dropped a cell phone,...](https://www.eff.org/deeplinks/2024/10/why-it-so-expensive-repair-my-devices) (Electronic Frontier Foundation - Christian Romero)
-- <img src='https://s.yimg.com/kw/assets/favicon-160x160.png' alt='drawing' style='max-height: 100px;'/>  [The best ergonomic keyboards for 2024 - If you spend a good portion of your waking hours...](https://www.engadget.com/computing/accessories/best-ergonomic-keyboard-130047982.html?src=rss) (Engadget - Amy Skorheim)
-- <img src='https://miro.medium.com/v2/resize:fit:1200/1*GEQyrbALYNw8S6ioVsJsMQ.png' alt='drawing' style='max-height: 100px;'/>  [M4 Mac, Ollama, and Mandelbrot Sets - Local AI/LLM goodness for Developers](https://bruce-abernethy.medium.com/m4-mac-ollama-and-mandelbrot-sets-8b1040257a94) (Medium - Bruce Abernethy)
-- <img src='https://pbs.twimg.com/profile_images/1389109636549074945/XWXdmqZe.jpg' alt='drawing' style='max-height: 100px;'/>  [Apple released a hearing aids feature for the AirPods Pro... - Apple released a hearing aids feature for the...](https://twitter.com/thel3l/status/1856381082662326760) (X (formerly Twitter) - Rithwik Jayasimha)
-- <img src='https://news.ycombinator.com/y18.svg' alt='drawing' style='max-height: 100px;'/>  [M4 Mac mini's efficiency is incredible - Comments](https://www.jeffgeerling.com/blog/2024/m4-mac-minis-efficiency-incredible) (jeffgeerling.com - Hacker News)
-- <img src='http://www.techmeme.com/241112/i23.jpg' alt='drawing' style='max-height: 100px;'/>  [Sources: Apple is making a 6" wall-mounted display that can control appliances, do videoconferencing, and use AI to navigate apps, and may unveil it by March (Mark Gurman/Bloomberg) -   Mark Gurman / Bloomberg: Sources: Apple is...](http://www.techmeme.com/241112/p23#a241112p23) (Techmeme - Techmeme)
+<div class="link-content"><img src='https://cdn.mos.cms.futurecdn.net/rZoVpmc2dbBehyJRH3rZq5.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Avoid 'dead butt syndrome' with these 4 top tips from a physical therapist and chair expert - Dr JulieLandis wants you sitting comfortably.](https://www.creativebloq.com/advice/dead-butt-syndrome) (Creative Bloq - beren.neale@futurenet.com (Beren Neale))
+</div>
+</div>
+<div class="link-content"><img src='https://www.eff.org/files/banner_library/og-repair_0.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  ["Why Is It So Expensive To Repair My Devices?" - Now, of course, we’ve all dropped a cell phone,...](https://www.eff.org/deeplinks/2024/10/why-it-so-expensive-repair-my-devices) (Electronic Frontier Foundation - Christian Romero)
+</div>
+</div>
+<div class="link-content"><img src='https://s.yimg.com/kw/assets/favicon-160x160.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [The best ergonomic keyboards for 2024 - If you spend a good portion of your waking hours...](https://www.engadget.com/computing/accessories/best-ergonomic-keyboard-130047982.html?src=rss) (Engadget - Amy Skorheim)
+</div>
+</div>
+<div class="link-content"><img src='https://miro.medium.com/v2/resize:fit:1200/1*GEQyrbALYNw8S6ioVsJsMQ.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [M4 Mac, Ollama, and Mandelbrot Sets - Local AI/LLM goodness for Developers](https://bruce-abernethy.medium.com/m4-mac-ollama-and-mandelbrot-sets-8b1040257a94) (Medium - Bruce Abernethy)
+</div>
+</div>
+<div class="link-content"><img src='https://pbs.twimg.com/profile_images/1389109636549074945/XWXdmqZe.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Apple released a hearing aids feature for the AirPods Pro... - Apple released a hearing aids feature for the...](https://twitter.com/thel3l/status/1856381082662326760) (X (formerly Twitter) - Rithwik Jayasimha)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [M4 Mac mini's efficiency is incredible - Comments](https://www.jeffgeerling.com/blog/2024/m4-mac-minis-efficiency-incredible) (jeffgeerling.com - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='http://www.techmeme.com/241112/i23.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Sources: Apple is making a 6" wall-mounted display that can control appliances, do videoconferencing, and use AI to navigate apps, and may unveil it by March (Mark Gurman/Bloomberg) -   Mark Gurman / Bloomberg: Sources: Apple is...](http://www.techmeme.com/241112/p23#a241112p23) (Techmeme - Techmeme)
+</div>
+</div>
+
+## ui
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Uno Platform Studio: GUI Designer for Cross-Platform .NET Applications - Comments](https://platform.uno/blog/uno-platform-studio-featuring-hot-design/) (Uno Platform - Hacker News)
+</div>
+</div>
+<div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Europeans Spend 575M Hours Clicking Cookie Banners Every Year - Comments](https://legiscope.com/blog/hidden-productivity-drain-cookie-banners) ( - Hacker News)
+</div>
+</div>
 
 [More Links](/links)
