--- a/_posts/2024-09-09-interesting-links-2024-09-09.md
+++ b/_posts/2024-09-09-interesting-links-2024-09-09.md
@@ -4,15 +4,33 @@ date: 2024-09-09
 categories: links
 ---
 
-Tags  - [development](#development) - [general](#general)
+Tags  - [art](#art) - [development](#development) - [inspiration](#inspiration) - [security](#security)
 
+
+## art
+<div class="link-content"><img src='https://cdn.mos.cms.futurecdn.net/vYoqXRARWVHM2pXqi6zs2D.jpg' class="link-image"/>
+<div class="link-text" markdown="1">
+  [20 essential sketching tips to help you elevate your skills - Sketching tips for every level.](https://www.creativebloq.com/illustration/sketching-tips-beginners-81516497) (Creative Bloq - mail@imaginefx.com (ImagineFX staff))
+</div>
+</div>
 
 ## development
--  [Architectural Katas - A large electronics store wants to get into the...](https://nealford.com/katas/list.html) (nealford.com - nealford.com)
+<div class="link-content"><div class="link-text" markdown="1">
+  [Architectural Katas - A large electronics store wants to get into the...](https://nealford.com/katas/list.html) (nealford.com - nealford.com)
+</div>
+</div>
 
-## general
--  [TWBW: My favorite poem will cure any “case of the Mondays” - With those foundational truths under our feet,...](mailto:reader-forwarded-email/f755f0f3488893b4863fd775f45323dd) (jordanraynor.com - Jordan Raynor)
-- <img src='https://cdn.mos.cms.futurecdn.net/vYoqXRARWVHM2pXqi6zs2D.jpg' alt='drawing' style='max-height: 100px;'/>  [20 essential sketching tips to help you elevate your skills - Sketching tips for every level.](https://www.creativebloq.com/illustration/sketching-tips-beginners-81516497) (Creative Bloq - mail@imaginefx.com (ImagineFX staff))
-- <img src='https://news.ycombinator.com/favicon.ico' alt='drawing' style='max-height: 100px;'/>  [Flipper Zero Gets Major Firmware Update, Can Eavesdrop on Walkie-Talkies - Comments](https://www.pcmag.com/news/flipper-zero-gets-major-firmware-update) (PCMAG - Hacker News)
+## inspiration
+<div class="link-content"><div class="link-text" markdown="1">
+  [TWBW: My favorite poem will cure any “case of the Mondays” - With those foundational truths under our feet,...](mailto:reader-forwarded-email/f755f0f3488893b4863fd775f45323dd) (jordanraynor.com - Jordan Raynor)
+</div>
+</div>
+
+## security
+<div class="link-content"><img src='https://news.ycombinator.com/favicon.ico' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Flipper Zero Gets Major Firmware Update, Can Eavesdrop on Walkie-Talkies - Comments](https://www.pcmag.com/news/flipper-zero-gets-major-firmware-update) (PCMAG - Hacker News)
+</div>
+</div>
 
 [More Links](/links)
